# AGVarPred

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_CARD.md  README.md  RELEASE_CHECKLIST.md  RELEASE_REPORT.md  SECURITY.md  data_manifest.json  pyproject.toml
.github/workflows/: release.yml  tests.yml
AGVarPred-training/: CITATION.cff  Makefile  README.md  requirements.txt
AGVarPred-training/configs/: train_gene_set.json
AGVarPred-training/scripts/ablation/: ablation_feature_groups.py  ablation_feature_groups_minus_af.py  ablation_study.py
AGVarPred-training/scripts/data_preparation/: build_alphagenome_input_split.py  build_clean_clinvar_gold.py  split_clinvar_clean.py
AGVarPred-training/scripts/external_validation/: benchmark_cadd_revel_alphamissense.py  build_clingen_benchmark.py  build_clinvar_benchmark.py  build_dvd_benchmark.py  build_gnomad_benign_benchmark.py  build_grimm2015_benchmark.py  build_mave_multi_gene_benchmark.py  build_panelapp_benign_benchmark.py  build_vip_benchmark.py  code_external_generic.py  code_external_humsavar.py  code_external_validation.py  combine_dvd_features.py  combine_features.py  combine_features_per_run.py  combine_grimm2015_features.py  combine_panelapp_features.py  create_benchmark_comparison_figure.py  (+75 more)
AGVarPred-zenodo/: CITATION.cff  LICENSE  README.md  checksums.sha256  code_reference.txt  data_manifest.json
AGVarPred-zenodo/benchmarks/: benchmark_dvd.csv  benchmark_gnomad_benign.csv  benchmark_grimm2015.csv  benchmark_grimm2015.summary.txt  benchmark_mave_independent.csv  benchmark_panelapp_benign_conf3.csv  benchmark_pathpredictor.csv  benchmark_vip.csv  variant_benchmark_map.csv
AGVarPred-zenodo/metrics/: confusion_matrix.txt  final_metrics.csv  shap_category_analysis.csv
docs/: api.md  installation.md  reproducibility.md  usage.md
examples/: predict.sh  sample.vcf
external_validation/benchmarks/: benchmark_ddd_clinical.csv  benchmark_independent_humsavar.csv  cross_benchmark_overlap_report.csv
model/model_full/: selected_features.txt
model/model_no_af/: final_metrics.csv  final_pipeline.pkl  manifest.yaml
src/AGVarPred/: __init__.py  cli.py  pipeline.py  predictor.py
src/agvarpred_core/: __init__.py  af_source.py  alphagenome.py  feature_generator.py  feature_selector.py  gnomad.py  preprocessing.py  utils.py  vep.py
tests/: conftest.py  test_alphagenome.py  test_cli.py  test_feature_selector.py  test_gnomad.py  test_model_manifest.py  test_predictor.py  test_preprocessing.py  test_vep.py
(+18 files in other folders)
